ver 1.2.13(stable)  完成AI模型的接入